<resources>
    <string name="app_name">zbkihaveutest </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- 注册页 -->
    <string name="hint_email">邮箱地址</string>
    <string name="hint_name">姓名（最多为20位字符）</string>
    <string name="hint_password">密码（6-20位）</string>
    <string name="hint_repeat_password">重复密码</string>
    <string name="hint_captcha">验证码</string>
    <string name="hint_tuiguang">推广码(选填)</string>
    <string name="register_to_login">注册并登录</string>
    <string name="register_have_account">已有优众账号？</string>
    <string name="register_have_account_to_login">立即登录</string>
</resources>
